--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
             }
         ],
         "react/prop-types": [2, { "skipUndeclared": true }],
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "no-unused-vars": "warn"
     },
     "parserOptions": {
         "ecmaVersion": 2020,
