--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^12.0.0",
+        "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.2.1",
         "axios": "^0.24.0",
         "formik": "^2.2.9",
@@ -48,6 +48,6 @@
         "eslint-plugin-react": "^7.27.1",
         "eslint-plugin-react-hooks": "^4.3.0",
         "prettier": "^2.5.1",
-        "react-app-rewired": "^2.1.8"
+        "react-app-rewired": "2.1.11"
     }
 }
