--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "eject": "react-app-rewired eject",
+        "prepare": "husky install",
+        "fix": "run-s \"fix:* {@}\" --",
+        "fix:lint": "eslint --fix --no-error-on-unmatched-pattern",
+        "fix:format": "prettier --write",
+        "format": "yarn fix:format 'src/**/*.(js|ts|json|md)'",
+        "lint": "yarn fix:lint src/**/*.{js,ts,md,json}"
     },
     "eslintConfig": {
         "extends": [
@@ -41,12 +47,17 @@
         ]
     },
     "devDependencies": {
+        "@commitlint/cli": "^16.2.1",
+        "@commitlint/config-conventional": "^16.2.1",
         "eslint": "^8.5.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-json": "^3.1.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.27.1",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.3.5",
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.5.1",
         "react-app-rewired": "2.1.11"
     }
