--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "react-app-rewired": "2.1.11",
+    "storybook-react-router": "^1.0.8",
     "webpack": "^5.70.0"
   }
 }
